--- a/main.html
+++ b/main.html
@@ -53,13 +53,15 @@
 		<button id="retake-btn" class="hide btn btn-primary btn-lg">Retake Quiz</button>
 	</div>
 	<!-- SCRIPTS -->
+    <script>
 
+    </script>
 	<!-- JQUERY -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<!-- BOOTSTRAP -->
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- CUSTOM -->
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="OCEAN.js"></script>
 </body>
 </html>
